name:                aoc2018
version:             0.1.0.0
homepage:            https://github.com/incinirate/AOC-2018#readme
license:             OtherLicense
license-file:        LICENSE
author:              Bryan Becar (Incin)
maintainer:          dogescript@gmail.com
copyright:           2018 Bryan Becar

build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       extra, array, containers,
                       parsec, data-ordlist, parsec3-numbers
  other-modules:
    Util, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12
